20250522_ Creadas clases globales de respuesta para errores y api

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -4,3 +4,7 @@ DB_USER=root
 DB_PASS=root
 DB_NAME=todoapp
 PORT=3000
+
+DATABASE_URL="mysql://root:root@localhost:3306/crianza_colaborativa"
+JWT_SECRET=unirnidogrupo01
+JWT_EXPIRES_IN=6h 
