20250517 Cambios menores previos a jsdoc

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,17 +1,9 @@
-# Variables de conexión típizas para una base de datos mysql
-
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASS=root
-DB_NAME=crianza_colaborativa
-
 # Puerto por defecto para el servidor
 PORT=3000
 
 
 # Cadena de conexión completa para Prisma
 # DATABASE_URL="mysql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-DATABASE_URL="mysql://root:root@localhost:3306/crianza_colaborativa"
+DATABASE_URL="mysql://root:root@localhost:3306/nidodb"
 JWT_SECRET=unirnidogrupo01
 JWT_EXPIRES_IN=3600
