--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
-version: '3.8'
-
 services:
   db:
     image: mysql:latest
-    container_name: todoapp_mysql
+    container_name: nidodb_mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: todoapp
+      MYSQL_DATABASE: nidodb
     ports:
       - "3306:3306"
     volumes:
-      - ./db/schema.sql:/docker-entrypoint-initdb.d/1_schema.sql
-      # - ./db/init.sql:/docker-entrypoint-initdb.d/1_init.sql
+      # - ./db/schema.sql:/docker-entrypoint-initdb.d/1_schema.sql
+      - ./db/init.sql:/docker-entrypoint-initdb.d/1_init.sql
       - ./db/seed.sql:/docker-entrypoint-initdb.d/2_seed.sql
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
