20250527: Added email service added docs

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -7,3 +7,7 @@ PORT=3000
 DATABASE_URL="mysql://root:root@localhost:3306/nidodb"
 JWT_SECRET=unirnidogrupo01
 JWT_EXPIRES_IN=3600
+EMAIL_HOST=smtp.gmail.com 
+EMAIL_PORT=465               
+EMAIL_USER=nidotask@gmail.com
+EMAIL_PASS=securepass
