20250528 | Auth completado, db añadida

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,13 +1,19 @@
+
 # Puerto por defecto para el servidor
 PORT=3000
-
 
 # Cadena de conexión completa para Prisma
 # DATABASE_URL="mysql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 DATABASE_URL="mysql://root:root@localhost:3306/nidodb"
 JWT_SECRET=unirnidogrupo01
 JWT_EXPIRES_IN=3600
+
+#EMAIL
 EMAIL_HOST=smtp.gmail.com 
 EMAIL_PORT=465               
 EMAIL_USER=nidotask@gmail.com
-EMAIL_PASS=securepass
+EMAIL_PASS=securepassword
+
+# FRONTEND
+
+WEB_ULR=http://localhost:4200
