--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,7 +13,8 @@
     "outDir": "./dist"                        
   },
   "include": [
-    "src/**/*.ts"                                     
+    "src/**/*.ts",
+    "src/**/*.d.ts"                                     
   ],
   "exclude": ["node_modules"]
 }
