--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,7 +14,7 @@
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.d.ts"                                     
+    "src/**/*.d.ts",                                   
   ],
   "exclude": ["node_modules"]
 }
