20250530 | Añadido de forma global soporte de Logger con Mongo y Mongoose

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -11,8 +11,13 @@ JWT_SECRET=unirnidogrupo01
 EMAIL_HOST=smtp.gmail.com 
 EMAIL_PORT=465               
 EMAIL_USER=nidotask@gmail.com
-EMAIL_PASS=securepassword
+EMAIL_PASS=securepass
 
 # FRONTEND
 
-WEB_ULR=http://localhost:4200
+FRONTEND_URL=http://localhost:4200
+
+
+# MONGO
+
+MONGODB_URI=mongodb://localhost:27017/nidodb_mongo
