--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   db:
     image: mysql:latest
@@ -27,3 +26,17 @@ services:
       UPLOAD_LIMIT: 64M
       PMA_USER: root
       PMA_PASSWORD: root
+
+  # Nueva instancia de MongoDB
+  mongodb:
+    image: mongo:latest 
+    container_name: nidodb_mongo 
+    restart: always 
+    ports:
+      - "27017:27017" 
+    volumes:
+      - ./db/data/mongodb:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root_mongo_password
+      MONGO_INITDB_DATABASE: nidodb_mongo 
