--- a/backend/.env.development
+++ b/backend/.env.development
@@ -19,5 +19,7 @@ FRONTEND_URL=http://localhost:4200
 
 
 # MONGO
-
-MONGODB_URI=mongodb://localhost:27017/nidodb_mongo
+MONGO_USER=root
+MONGO_PASSWORD=root_mongo_password
+MONGO_DB_NAME=nidodb_mongo
+MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@localhost:27017/${MONGO_DB_NAME}?authSource=admin
