--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,10 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/list": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
+    "@primeng/themes": "^19.1.3",
     "@tailwindcss/postcss": "^4.1.8",
     "postcss": "^8.5.3",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.8",
     "tslib": "^2.3.0",
