20250530 | Sugerencias por IA

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -23,3 +23,4 @@ MONGO_USER=root
 MONGO_PASSWORD=root_mongo_password
 MONGO_DB_NAME=nidodb_mongo
 MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@localhost:27017/${MONGO_DB_NAME}?authSource=admin
+GOOGLE_API_KEY=your_google_api_key
