--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "node-cron": "^4.1.0",
     "nodemailer": "^7.0.3",
     "pdfmake": "^0.2.20",
     "swagger-jsdoc": "^6.2.8",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.19",
