--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: nidodb
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/1_init.sql
       - ./db/seed.sql:/docker-entrypoint-initdb.d/2_seed.sql
@@ -21,7 +21,7 @@ services:
       - "8080:80"
     environment:
       PMA_HOST: db
-      PMA_PORT: 3306
+      PMA_PORT: 3307
       PMA_ARBITRARY: 1
       UPLOAD_LIMIT: 64M
       PMA_USER: root
@@ -29,7 +29,7 @@ services:
 
   # Nueva instancia de MongoDB
   mongodb:
-    image: mongo:latest 
+    image: mongo:8.0.10-noble
     container_name: nidodb_mongo 
     restart: always 
     ports:
