--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@google/genai": "^1.4.0",
     "@prisma/client": "^6.8.2",
+    "@types/cors": "^2.8.19",
+    "@types/node-cron": "^3.0.11",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "bcryptjs": "^3.0.2",
@@ -23,6 +25,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "node-cron": "^4.1.0",
     "nodemailer": "^7.0.3",
     "pdfmake": "^0.2.20",
     "swagger-jsdoc": "^6.2.8",
