--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "@primeng/themes": "^19.1.3",
     "@tailwindcss/postcss": "^4.1.8",
+    "date-fns": "^4.1.0",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
