--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@primeng/themes": "^19.1.3",
     "@tailwindcss/postcss": "^4.1.8",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
@@ -41,6 +42,7 @@
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.18",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
