--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "node-cron": "^4.1.0",
     "nodemailer": "^7.0.3",
     "pdfmake": "^0.2.20",
+    "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
