--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.19",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/pdfmake": "^0.2.11",
     "nodemon": "^3.1.10",
