--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,14 @@ services:
     container_name: nidodb_mysql
     restart: always
     environment:
+      LANG: C.UTF-8 
+      LC_ALL: C.UTF-8     
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: nidodb
     ports:
       - "3306:3306"
     volumes:
+      - ./db/charset.cnf:/etc/mysql/conf.d/charset.cnf
       - ./db/init.sql:/docker-entrypoint-initdb.d/1_init.sql
       - ./db/seed.sql:/docker-entrypoint-initdb.d/2_seed.sql
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
