--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -87,7 +87,10 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css",
+              "node_modules/primeicons/primeicons.css"
+            ],
             "scripts": []
           }
         }
