--- a/db/charset.cnf
+++ b/db/charset.cnf
@@ -1,7 +1,7 @@
 [mysqld]
 character-set-server           = utf8mb4
 collation-server               = utf8mb4_unicode_ci
-skip-character-set-client-handshake = 1   
+# skip-character-set-client-handshake = 1   
 
 [client]
 default-character-set          = utf8mb4
