--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,4 +1,3 @@
-
 # Puerto por defecto para el servidor
 PORT=3000
 
@@ -11,15 +10,17 @@ JWT_SECRET=unirnidogrupo01
 EMAIL_HOST=smtp.gmail.com 
 EMAIL_PORT=465               
 EMAIL_USER=nidotask@gmail.com
-EMAIL_PASS=securepass
+EMAIL_PASS=taie kidp qpbg eups
 
 # FRONTEND
 
 FRONTEND_URL=http://localhost:4200
 
+
+# MONGO
 # MONGO
 MONGO_USER=root
 MONGO_PASSWORD=root_mongo_password
 MONGO_DB_NAME=nidodb_mongo
-MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@localhost:27017/${MONGO_DB_NAME}?authSource=admin
+MONGODB_URI=mongodb://root:root_mongo_password@localhost:27017/nidodb_mongo?authSource=admin
 GOOGLE_API_KEY=your_api_key
