--- a/backend/.env.development
+++ b/backend/.env.development
@@ -19,9 +19,6 @@ FRONTEND_URL=http://localhost:4200
 
 # MONGO
 # MONGO
-MONGO_USER=root
-MONGO_PASSWORD=root_mongo_password
-MONGO_DB_NAME=nidodb_mongo
-MONGODB_URI=mongodb://root:root_mongo_password@localhost:27017/nidodb_mongo?authSource=admin
-GOOGLE_API_KEY=your_api_key
-`
+# MONGO
+MONGODB_URI=mongodb://root:root_mongo_password@localhost:27017/?authSource=admin
+GOOGLE_API_KEY=apikey
